--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,4 +10,8 @@ phases:
   post-build:
     commands:
     - echo "Entered into post build phase"
+    - mv target/deploy ./
+ artifacts:
+   files:
+     - deploy/**/*
     
